[package]
name = "dydx"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
clap = { version = "4.5.21", features = ["wrap_help", "derive"] }
clap-verbosity-flag = "3.0.1"
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
egui = "0.29.1"
lazy_static = "1.5.0"
log = "0.4.22"
nannou = "0.19.0"
nannou_egui = "0.19.0"
peroxide = "0.39.0"
pretty_env_logger = "0.5.0"
specs = { version = "0.20.0", features = ["derive"] }
symbolica = "0.13.0"
thiserror = "2.0.3"

[profile.profiling]
inherits = "release"
debug = true
